StageComparatorComp: Bugfix - View nav in mobile - View buttons squished on narrower screen sizes

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -372,6 +372,7 @@ a:visited {
   min-height: 2.5rem;
   padding: .75rem;
   border-radius: 6px;
+  text-align: center;
   line-height: 1;
   font-weight: 900;
   background-color: hsl(196, 12%, 75%);
